--- a/news_management/src/main/webapp/WEB-INF/web.xml
+++ b/news_management/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="4.0"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xmlns:xml="http://www.w3.org/XML/1998/namespace"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd ">
-
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+<display-name>news-management</display-name>
+  <welcome-file-list>
+    <welcome-file>registration.jsp</welcome-file>
+  </welcome-file-list>
 	<servlet>
 		<servlet-name>Controller</servlet-name>
-		<servlet-class>by.management.news.controller.Controller</servlet-class>
+		<servlet-class>by.news.management.controller.Controller</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
